feat(security): allow authentication by DNI or email